Implement register inside the api-gateway
